--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "gerardbot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "bin/bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Pierre Declémy",
   "license": "ISC",
   "dependencies": {
     "slackbots": "^0.5.1"
